--- a/server.properties
+++ b/server.properties
@@ -19,14 +19,14 @@ network-compression-threshold=256
 max-tick-time=60000
 require-resource-pack=false
 use-native-transport=true
-max-players=20
+max-players=45
 online-mode=false
 enable-status=true
 allow-flight=false
 initial-disabled-packs=
 broadcast-rcon-to-ops=true
 view-distance=10
-server-ip=
+server-ip=smp.GHOST.org
 resource-pack-prompt=
 allow-nether=true
 server-port=25565
